# AgentsFactory

./: .env.example  .gitignore  CLONE.md  Dockerfile  README.md  agentsfactory_metrics.db-shm  agentsfactory_metrics.db-wal  index.html  pyproject.toml
AIdentify/: index.html  marketplace.html
config/: projects.json
dashboard/: README.md  main.py  requirements.txt
data/: latest_scanner_summary.txt
docs/: architecture.md  compliance_audit_schema.md  compliance_market_research.md  hermes-workflow-prompts.md  landing_page.html  launch_content.md  linkedin-post-1.md  marketplace.html  notion-workspace.md  outreach_leads.md  quick-prompt-card.md
examples/: e2e_research.py  evaluator_loop.py  research_pipeline.yaml  simple_pipeline.py
growth/: daily-system.md  engagement-templates.md  first-thread.md  safety-assessment.md  target-accounts.md
pipeline/: 2026-06-26-build.json  2026-06-26-coder.json  2026-06-26-outreach.json  2026-06-26-planner.json  2026-06-26-researcher.json  2026-06-26-reviewer.json  2026-06-26-selection.json  2026-06-26-social.json
projects/ai-competitive-intelligence-agent/backend/: .env.example  Dockerfile  pyproject.toml
projects/ai-competitive-intelligence-agent/backend/app/: __init__.py  main.py
projects/ai-competitive-intelligence-agent/backend/app/api/: __init__.py  battlecards.py  briefings.py  competitors.py  health.py  signals.py
projects/ai-competitive-intelligence-agent/backend/app/core/: config.py  database.py
projects/ai-competitive-intelligence-agent/backend/app/models/: __init__.py
projects/ai-competitive-intelligence-agent/backend/app/schemas/: __init__.py  health.py
projects/ai-competitive-intelligence-agent/backend/app/services/: signal_detector.py
projects/ai-competitive-intelligence-agent/backend/app/workers/: scanner.py
projects/ai-competitive-intelligence-agent/backend/tests/: test_api.py
projects/reportgenie-ai/backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
projects/reportgenie-ai/backend/app/: main.py
projects/reportgenie-ai/backend/app/api/: routes.py
projects/reportgenie-ai/backend/app/core/: config.py  database.py  logging.py
projects/reportgenie-ai/backend/app/models/: __init__.py  report.py
projects/reportgenie-ai/backend/app/schemas/: report.py
projects/reportgenie-ai/backend/app/services/: data_connector.py  report_generator.py
projects/reportgenie-ai/backend/tests/: test_api.py
projects/vendor-risk-assessment-agent/backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
projects/vendor-risk-assessment-agent/backend/app/: __init__.py  main.py
projects/vendor-risk-assessment-agent/backend/app/api/: assessments.py  dashboard.py  vendors.py
projects/vendor-risk-assessment-agent/backend/app/core/: config.py  database.py
projects/vendor-risk-assessment-agent/backend/app/models/: __init__.py
projects/vendor-risk-assessment-agent/backend/app/schemas/: __init__.py
projects/vendor-risk-assessment-agent/backend/app/services/: __init__.py  assessment_service.py  risk_scorer.py
projects/vendor-risk-assessment-agent/backend/tests/: test_app.py
scripts/: .gumroad_token  agent_activity.py  autonomous_pipeline.py  check_date.py  content_calendar.py  content_queue.json  create_notion_workspace.py  deep_scanner.py  generate_social_assets.py  gumroad_publisher.py  gumroad_state.json  idea_loop.py  js_renderer.py  marketplace_sync.py  master_dashboard.py  opportunity_scanner.py  opportunity_scanner_v2.py  owl_orchestrate.py  pipeline_manager.py  tool_scanner.py  (+8 more)
(+819 files in other folders)
